@@ -494,6 +494,28 @@ name|scheduler
 operator|.
 name|event
 operator|.
+name|NodeRemovedSchedulerEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|scheduler
+operator|.
+name|event
+operator|.
 name|NodeUpdateSchedulerEvent
 import|;
 end_import
@@ -1997,6 +2019,93 @@ argument_list|,
 name|RMNodeEventType
 operator|.
 name|EXPIRE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|NodeState
+operator|.
+name|LOST
+argument_list|,
+name|node
+operator|.
+name|getState
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testUnhealthyExpireForSchedulerRemove ()
+specifier|public
+name|void
+name|testUnhealthyExpireForSchedulerRemove
+parameter_list|()
+block|{
+name|RMNodeImpl
+name|node
+init|=
+name|getUnhealthyNode
+argument_list|()
+decl_stmt|;
+name|verify
+argument_list|(
+name|scheduler
+argument_list|,
+name|times
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+operator|.
+name|handle
+argument_list|(
+name|any
+argument_list|(
+name|NodeRemovedSchedulerEvent
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|node
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|RMNodeEvent
+argument_list|(
+name|node
+operator|.
+name|getNodeID
+argument_list|()
+argument_list|,
+name|RMNodeEventType
+operator|.
+name|EXPIRE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|scheduler
+argument_list|,
+name|times
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+operator|.
+name|handle
+argument_list|(
+name|any
+argument_list|(
+name|NodeRemovedSchedulerEvent
+operator|.
+name|class
 argument_list|)
 argument_list|)
 expr_stmt|;
